--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -1,9 +1,10 @@
+<%-# form_for([@cocktail, @ingredient]) do |f| # this from karl doesn't work %>
 <%= form_for([@cocktail, @cocktail.ingredients.build]) do |f| %>
   <p>
     <%= f.text_field :ingredient %>
   </p>
 
   <p>
-    <%= f.submit "Add" %>
+    <%= f.submit "Save changes", :class => 'btn' %>
   </p>
 <% end %>
