--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -10,7 +10,7 @@
 
 <% @cocktails.each do |cocktail| %>
   <tr>
-    <td><%= cocktail.name %></td>
+    <td><%= cocktail.name.titleize %></td>
     <td><%= link_to 'Show recipe', cocktail %></td>
     <td><%= link_to 'Edit', edit_cocktail_path(cocktail) %></td>
     <td><%= link_to 'Delete', cocktail, method: :delete, data: { confirm: 'Are you sure?' } %></td>
