--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1><%= @cocktail.name %></h1>
+<h1><%= @cocktail.name.titleize %></h1>
 
 <h2>Ingredients</h2>
 <ul>
