--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -1,5 +1,4 @@
-<%-# form_for([@cocktail, @ingredient]) do |f| # this from karl doesn't work %>
-<%= form_for([@cocktail, @cocktail.ingredients.build]) do |f| %>
+<%= form_for([@cocktail, @ingredient]) do |f| %>
   <p>
     <%= f.text_field :ingredient %>
   </p>
