changed Back button to Cancel in ingr edit. Added class

--- a/app/views/ingredients/edit.html.erb
+++ b/app/views/ingredients/edit.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', cocktail_path(@cocktail) %>
+<%= link_to 'Cancel', cocktail_path(@cocktail), :class => 'btn' %>
