got numbered notes working, except for return of array.

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -18,7 +18,13 @@
 <%= render "ingredients/form" %>
 
 <h2>Directions</h2>
-<div class="notes"><%= simple_format @cocktail.notes %></div>
+
+<ol>
+<%=
+  @cocktail.notes.split(/\n/).each do |line|%>
+  <li><%=line%></li>
+  <%end%>
+</ol>
 
 <%= link_to 'Edit Directions', edit_cocktail_path(@cocktail),:class => 'btn' %>
 <%= link_to 'Back to Cocktail List', cocktails_path,:class => 'btn' %>
