added label for submit button to cocktail form

--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -19,6 +19,6 @@
     <%= f.label :notes %><br />
     <%= f.text_area :notes %>
   </div>  <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Save changes", :class => 'btn' %>
   </div>
 <% end %>
