--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @cocktail %> |
-<%= link_to 'Back', cocktails_path %>
+<%= link_to 'Cancel', @cocktail, :class => 'btn' %> |
+<%= link_to 'Back to Cocktail list', cocktails_path, :class => 'btn' %>
