--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -12,13 +12,14 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :name %>
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :notes %><br />
-    <%= f.text_area :notes %>
-  </div>  <div class="actions">
+    <%= f.label "Directions" %>
+    <%= f.text_area :notes, :rows => 10 %>
+  </div>
+  <div class="actions">
     <%= f.submit "Save changes", :class => 'btn' %>
   </div>
 <% end %>
