--- a/app/views/cocktails/edit.html.erb
+++ b/app/views/cocktails/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing cocktail</h1>
-
+<h1 class="hero-unit"><%= @cocktail.name.titleize %></h1>
+<p class="lead">Make changes below. Hitting return in 'Directions' creates a new line display</p>
 <%= render 'form' %>
-
 <%= link_to 'Cancel', @cocktail, :class => 'btn' %> |
 <%= link_to 'Back to Cocktail list', cocktails_path, :class => 'btn' %>
