--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New cocktail</h1>
-
+<h1 class="hero-unit">New cocktail</h1>
+<p class="lead"><%= directions_note %></p>
 <%= render 'form' %>
 
 <%= link_to 'Back', cocktails_path %>
