added check to cocktails show view to only display notes if they exist

--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -20,9 +20,11 @@
 <h2>Directions</h2>
 
 <ol>
-  <%@cocktail.notes.split(/\n/).each do |line|%>
-    <li><%=line%></li>
-  <%end%>
+  <%  if @cocktail.notes
+        @cocktail.notes.split(/\n/).each do |line|%>
+        <li><%=line%></li>
+        <%end%>
+      <%end%>
 </ol>
 
 <%= link_to 'Edit Directions', edit_cocktail_path(@cocktail),:class => 'btn' %>
