created form stub new cocktail to only enter name. adding directions is confusing without having ingredients

--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,5 @@
 <h1 class="hero-unit">New cocktail</h1>
 <p class="lead"><%= directions_note %></p>
-<%= render 'form' %>
+<%= render 'formNameOnly' %>
 
-<%= link_to 'Back', cocktails_path %>
+<%= link_to 'Cancel', cocktails_path, :class => 'btn' %>
